--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "buefy": "^0.9.10",
+    "file-saver": "^2.0.5",
     "vue": "^2.6.11",
     "vue-axios": "^3.4.0",
-    "buefy": "^0.9.10",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
