--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
+pnpm-debusg.log*
 
 # Editor directories and files
 .idea
@@ -21,3 +21,5 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+.firebase
